--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -110,6 +110,7 @@
 .web3-section-title {
   font-size: .9rem;
   font-weight: 500;
+  margin-top: 1rem;
   padding: 1rem 1.5rem;
 }
 
@@ -135,7 +136,7 @@
 
     &:focus,
     &:hover {
-      box-shadow: 0 .4rem 1.6rem rgba(0, 0, 0, .075), 0 .1rem .2rem rgba(0, 0, 0, .01);
+      box-shadow: 0 .4rem 1.6rem -.4rem rgba(0, 0, 0, .075), 0 .1rem .2rem rgba(0, 0, 0, .01);
       z-index: 99;
 
       .platform-action {
@@ -345,44 +346,78 @@
   }
 }
 
+// NFT Preview
 .nft-preview {
-  height: calc(100vh - 1rem);
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  left: 0;
   position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 50%;
-  z-index: 100;
+  top: 0;
+  width: 100vw;
+  z-index: 199;
 
-  .panel-container {
-    height: calc(100vh - 2rem);
+  .preview-overlay {
+    background: rgba($dark-color, .45);
+    height: 100vh;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    z-index: -9;
   }
 
-  .panel-header {
-    overflow: hidden auto;
-    padding: 1rem;
+  .btn-close {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+  }
 
-    .img-container {
-      display: flex;
-      min-width: 100%;
+  .preview-container {
+    background: $light-color;
+    border-radius: .8rem;
+    height: auto;
+    max-height: 26rem;
+    max-width: $size-lg;
+    position: relative;
+    width: 100%;
+  }
 
+  .preview-image {
+    align-items: center;
+    border-radius: .8rem;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    max-height: 26rem;
+    max-width: 24rem;
+    width: 100%;
+
+    .img-responsive,
+    .video-responsive {
+      border-radius: .8rem;
+      height: auto;
+      max-height: 26rem;
+      max-width: 24rem;
+      padding: .4rem;
+      width: auto;
     }
+  }
 
-    .panel-header-img {
-      flex: 1 1 50%;
-      margin-right: 1rem;
-      width: 50%;
-    }
-
-    .img-responsive {
-      width: 100%;
-      border-radius: .5rem;
-    }
+  .preview-content {
+    background: lighten($bg-color, 5%);
+    border-bottom-right-radius: .8rem;
+    border-top-right-radius: .8rem;
+    height: 100%;
+    max-height: 26rem;
+    overflow-y: auto;
+    padding: 2rem;
 
     .collection-title {
       align-items: center;
       display: flex;
-      padding: 1rem 0 .5rem 0;
+      padding-bottom: .5rem;
 
       .collection-logo {
         flex: 0 0 1.2rem;
@@ -393,6 +428,7 @@
           box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
           font-size: 1rem;
           height: 1.2rem;
+          object-fit: cover;
           width: 1.2rem;
         }
       }
@@ -406,19 +442,48 @@
     .nft-header-name {
       font-size: 1.2rem;
       font-weight: 900;
+      line-height: 1.25;
+      word-break: break-all;
     }
 
     .nft-header-actions {
       margin-top: .5rem;
     }
-  }
 
-  .panel-body {
-    padding: 0 1rem 1rem 1rem;
+    .traits-cards {
+      display: flex;
+      flex-wrap: wrap;
+      gap: .5rem;
+
+      .traits-card {
+        border: .05rem solid rgba(18, 18, 18, 0.08);
+        box-shadow: 0 .2rem .8rem rgba(0, 0, 0, 0.05);
+        border-radius: .4rem;
+        color: $dark-color;
+        text-transform: uppercase;
+        padding: .2rem .4rem;
+
+        .trait-type {
+          color: $gray-color-dark;
+          font-size: .5rem;
+          line-height: 2;
+        }
+
+        .trait-value {
+          font-weight: 700;
+          font-size: .6rem;
+          line-height: 1.5;
+        }
+      }
+    }
   }
 
   .panel-widget {
     margin: 1rem 0;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     .panel-widget-title {
       font-size: .7rem;
@@ -432,32 +497,7 @@
       line-height: 1rem;
     }
 
-    .traits-cards {
-      display: flex;
-      flex-wrap: wrap;
-      gap: .5rem;
-
-      .traits-card {
-        background: $light-color;
-        border: .05rem solid rgba(18, 18, 18, 0.08);
-        box-shadow: 0 .2rem .8rem rgba(0, 0, 0, 0.05);
-        border-radius: .4rem;
-        color: $dark-color;
-        text-transform: uppercase;
-        padding: .2rem .4rem;
-
-        .trait-type {
-          font-size: .5rem;
-          line-height: 2;
-        }
-
-        .trait-value {
-          font-weight: 700;
-          font-size: .6rem;
-          line-height: 1.5;
-        }
-      }
-    }
+    
   }
 }
 
