--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -152,9 +152,18 @@
       box-shadow: inset 0 0 0 .075rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .2);
       color: $light-color;
       display: flex;
+      flex: 0 0 2rem;
       height: 2rem;
       justify-content: center;
       width: 2rem;
+
+      &.website {
+        img {
+          border-radius: .6rem;
+          height: 2rem;
+          width: 2rem;
+        }
+      }
     }
 
     .platform-title {
@@ -181,10 +190,9 @@
 
   .profile-collection-widgets {
     position: relative;
-    min-width: 50%;
-    max-width: 50%;
     height: auto;
     max-height: 30rem;
+    width: 100%;
 
     .expand-icon {
       position: absolute;
@@ -378,7 +386,7 @@
     background: $light-color;
     border-radius: .8rem;
     height: auto;
-    max-height: 26rem;
+    max-height: 24rem;
     max-width: $size-lg;
     position: relative;
     width: 100%;
@@ -390,18 +398,44 @@
     display: flex;
     height: 100%;
     justify-content: center;
-    max-height: 26rem;
+    max-height: 24rem;
     max-width: 24rem;
+    padding: .5rem;
+    position: relative;
     width: 100%;
+
+    &.preview-image-poap {
+      height: 24rem;
+      overflow: hidden;
+
+      .img-container {
+        border-radius: 50%;
+        max-height: 16rem;
+        max-width: 16rem;
+        overflow: hidden;
+        position: relative;
+        z-index: 1;
+      }
+    }
+
+    .preview-image-bg {
+      background-size: 300%;
+      background-position: center;
+      display: block;
+      filter: blur(4rem);
+      height: 100%;
+      opacity: .5;
+      position: absolute;
+      width: 100%;
+    }
 
     .img-responsive,
     .video-responsive {
       border-radius: .8rem;
       height: auto;
-      max-height: 26rem;
-      max-width: 24rem;
-      padding: .4rem;
-      width: auto;
+      max-height: 23rem;
+      max-width: 23rem;
+      width: 100%;
     }
   }
 
@@ -410,7 +444,7 @@
     border-bottom-right-radius: .8rem;
     border-top-right-radius: .8rem;
     height: 100%;
-    max-height: 26rem;
+    max-height: 24rem;
     overflow-y: auto;
     padding: 2rem;
 
@@ -456,8 +490,8 @@
       gap: .5rem;
 
       .traits-card {
-        border: .05rem solid rgba(18, 18, 18, 0.08);
-        box-shadow: 0 .2rem .8rem rgba(0, 0, 0, 0.05);
+        border: .05rem solid rgba($dark-color, 0.05);
+        box-shadow: 0 .2rem .8rem -.2rem rgba($dark-color, 0.1);
         border-radius: .4rem;
         color: $dark-color;
         text-transform: uppercase;
