--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -193,7 +193,19 @@
         display: flex;
         flex: 0 0 1.6rem;
         justify-content: center;
-        margin-right: .4rem;
+        position: relative;
+
+        .avatar-img {
+          border-radius: .5rem;
+
+          & + .icon {
+            bottom: -.6rem;
+            position: absolute;
+            right: -.6rem;
+            transform: scale(.5);
+            z-index: 99;
+          }
+        }
       }
 
       .social {
@@ -239,22 +251,29 @@
     }
 
     &.lens {
-      .bg-lens {
+      .icon {
         background: #BDFC5A;
         color: #204F24;
       }
     }
 
     &.farcaster {
-      .bg-farcaster {
+      .icon {
         background: #8a63d2;
         color: #fff;
       }
     }
 
     &.spaceid {
-      .bg-spaceid {
+      .icon {
         background: #71EBAA;
+        color: #fff;
+      }
+    }
+
+    &.twitter {
+      .icon {
+        background: #4A99E9;
         color: #fff;
       }
     }
@@ -325,13 +344,13 @@
     color: $dark-color;
     font-size: .7rem;
     height: 1.6rem;
-    margin-right: .2rem;
     padding: .3rem;
     width: 1.6rem;
   }
 
   .content {
     flex: 1;
+    margin-left: .4rem;
   }
 
   .content-title {
