--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -192,16 +192,18 @@
         border-radius: .5rem;
         display: flex;
         flex: 0 0 1.6rem;
+        height: 1.6rem;
         justify-content: center;
         position: relative;
+        width: 1.6rem;
 
         .avatar-img {
           border-radius: .5rem;
 
           & + .icon {
-            bottom: -.6rem;
+            bottom: -.7rem;
             position: absolute;
-            right: -.6rem;
+            right: -.7rem;
             transform: scale(.5);
             z-index: 1;
           }
