--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -199,6 +199,7 @@
     position: relative;
     height: auto;
     max-height: 30rem;
+    max-width: 40rem;
     width: 100%;
 
     .expand-icon {
@@ -335,9 +336,9 @@
   }
 
   .profile-widget-poap {
-    min-width: 50%;
     height: auto;
     max-height: 30rem;
+    max-width: 40rem;
     width: 100%;
 
     .widgets-collection-list {
@@ -349,8 +350,8 @@
       overflow-x: scroll;
 
       .nft-container {
-        width: 9rem;
-        min-width: 8rem;
+        width: 4rem;
+        min-width: 4rem;
 
         @media screen and (max-width: $size-md) {
           flex: 0 0 50%;
@@ -391,8 +392,7 @@
   .preview-container {
     background: $light-color;
     border-radius: .8rem;
-    height: auto;
-    max-height: 24rem;
+    height: 24rem;
     max-width: $size-lg;
     position: relative;
     width: 100%;
