--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -61,23 +61,34 @@ body {
 }
 
 .web3bio-mask-cover {
+  align-items: center;
+  display: flex;
   position: fixed;
+  justify-content: center;
   left: 0;
   top: 0;
   background: rgba($color: #000000, $alpha: .3);
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   z-index: 100;
 
   .web3bio-modal-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
     background: #fff;
+    border-radius: 1rem;
+    height: 100%;
+    max-height: 80vh;
+    max-width: 80vw;
+    overflow-y: auto;
+    padding: 2rem;
+    width: 100%;
+
+    .web3-profile-base {
+      top: 0;
+    }
 
     .modal-close-icon {
       position: absolute;
-      left: 1rem;
+      right: 1rem;
       top: 1rem;
       z-index: 99;
     }
