--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -515,6 +515,11 @@
           font-size: .6rem;
           line-height: 1.5;
         }
+        .trait_percentage{
+          font-weight: 500;
+          font-size: .3rem;
+          line-height: 1;
+        }
       }
     }
   }
