--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -83,7 +83,7 @@ body {
     width: 100%;
 
     .web3-profile-base {
-      top: 0;
+      top: .5rem;
     }
 
     .modal-close-icon {
@@ -93,7 +93,6 @@ body {
       z-index: 99;
     }
   }
-
 }
 
 //- Web3.bio Cover
