Improve POAP image size

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -348,8 +348,7 @@
     border-color: darken(#F5F4FE, 10%);
     color: #463E68;
     height: auto;
-    max-height: 30rem;
-    max-width: 40rem;
+    margin: .5rem;
     width: 100%;
 
     .widgets-collection-list {
