--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -13,7 +13,7 @@
     filter: blur(4rem);
     height: 100vh;
     left: 0;
-    opacity: .05;
+    opacity: .04;
     position: fixed;
     top: 0;
     width: 100vw;
@@ -143,7 +143,7 @@
   }
 
   .profile-widget {
-    background: $light-color;
+    background: var(--widget-text-color, $light-color);
     border: .05rem solid rgba($dark-color, .075);
     border-radius: .8rem;
     box-shadow: 0 .1rem .2rem rgba($dark-color, .04);
@@ -172,8 +172,9 @@
 
     .platform-icon {
       align-items: center;
+      background: var(--widget-primary-color, $light-color);
       border-radius: .6rem;
-      box-shadow: inset 0 0 0 .075rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .2);
+      box-shadow: inset 0 0 0 .075rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .2), 2rem 0 6rem 4rem var(--widget-bg-color);
       color: $light-color;
       display: flex;
       flex: 0 0 2rem;
@@ -182,6 +183,8 @@
       width: 2rem;
 
       &.website {
+        background: $light-color;
+
         img {
           border-radius: .2rem;
           height: 1.2rem;
@@ -213,23 +216,32 @@
       }
 
       .btn {
+        background: var(--widget-primary-color, lighten($bg-color, 2%));
+        border: .05rem solid rgba($dark-color, .075);
+        color: $light-color;
         display: none;
         position: relative;
       }
     }
-  }
 
-  .profile-widget-title {
-    align-items: center;
-    display: flex;
-    font-weight: 500;
-    margin-bottom: 1rem;
+    .profile-widget-title {
+      align-items: center;
+      display: flex;
+      font-weight: 500;
+      margin-bottom: 1rem;
+    }
   }
 
   .profile-widget-nft {
-    background: lighten($bg-color, 6%);
+    background: $light-color;
     border-color: $bg-color;
     position: relative;
+
+    &.active {
+      .collection-switcher {
+        box-shadow: 0 .4rem .4rem -.2rem rgba($dark-color, .05);
+      }
+    }
 
     .emoji-large {
       font-size: 1.2rem;
@@ -252,7 +264,6 @@
       padding: 0 1rem;
 
       .collection-item {
-        background: #fff;
         border-radius: .6rem;
         height: 3.5rem;
         padding: .25rem;
@@ -299,10 +310,9 @@
       }
 
       .collection-switcher {
-        background: lighten($bg-color, 6%);
+        background: $light-color;
         user-select: none;
         height: 3.5rem;
-        box-sizing: border-box;
 
         .collection-list {
           display: flex;
@@ -610,8 +620,7 @@
 
 // NFT Collection Switcher
 .collection-switcher {
-  background: lighten($bg-color, 6%);
-  box-shadow: 0 .4rem .4rem -.2rem rgba($dark-color, .05);
+  background: $light-color;
   user-select: none;
   margin: 0 -1rem;
 
@@ -679,7 +688,7 @@
   position: relative;
   flex: 1 1;
   height: 100%;
-  overflow: hidden auto;
+  overflow-y: auto;
   padding: 0 .5rem;
 
   .nft-collection-list {
