--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -24,7 +24,7 @@
 .web3-profile-base {
   padding: .5rem .5rem 1rem .5rem;
   position: sticky;
-  top: 2.5rem;
+  top: 2rem;
 
   .profile-avatar {
     align-items: center;
@@ -121,28 +121,34 @@
 
   .profile-widget-item {
     aspect-ratio: 1 / 1;
+    max-width: 50%;
     padding: .5rem;
-    width: 50%;
+    width: 25%;
 
-    @media screen and (min-width: $size-sm) {
+    @media screen and (max-width: $size-xl) {
       width: 33.333%;
     }
 
-    @media screen and (min-width: $size-xl) {
-      width: 25%;
+    @media screen and (min-width: $size-md) and (max-width: $size-lg) {
+      width: 50%;
     }
 
-    &.profile-widget-full {
-      aspect-ratio: auto;
-      flex: 1 1;
-      height: auto;
-      max-height: 90vh;
-      width: 100%;
+    @media screen and (max-width: $size-sm) {
+      width: 50%;
     }
   }
 
+  .profile-widget-full {
+    aspect-ratio: auto;
+    flex: 1 1;
+    height: auto;
+    max-height: 90vh;
+    padding: .5rem;
+    width: 100%;
+  }
+
   .profile-widget {
-    background: var(--widget-text-color, $light-color);
+    background: $light-color;
     border: .05rem solid rgba($dark-color, .075);
     border-radius: .8rem;
     box-shadow: 0 .1rem .2rem rgba($dark-color, .04);
@@ -162,11 +168,13 @@
       box-shadow: 0 .4rem 1.6rem -.4rem rgba($dark-color, .15), 0 .1rem .2rem rgba($dark-color, .01);
       z-index: 99;
 
-      @media screen and (min-width: $size-md) {
-        .platform-action {
-          .btn {
-            display: inline-flex;
-          }
+      .platform-icon {
+        box-shadow: inset 0 0 0 .05rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .2), 1rem 0 10rem 2rem var(--widget-bg-color);
+      }
+
+      .platform-action {
+        .btn {
+          display: inline-flex;
         }
       }
     }
@@ -175,12 +183,13 @@
       align-items: center;
       background: var(--widget-primary-color, $light-color);
       border-radius: .6rem;
-      box-shadow: inset 0 0 0 .075rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .2), 2rem 0 6rem 4rem var(--widget-bg-color);
+      box-shadow: inset 0 0 0 .05rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .2), 1rem 0 6rem 3rem var(--widget-bg-color);
       color: $light-color;
       display: flex;
       flex: 0 0 2rem;
       height: 2rem;
       justify-content: center;
+      transition: all .25s ease-in-out;
       width: 2rem;
 
       &.website {
@@ -235,7 +244,7 @@
 
   .profile-widget-nft {
     background: $light-color;
-    border-color: $bg-color;
+    border-color: lighten($bg-color, 3%);
     position: relative;
 
     &.active {
