feat: init share modal

--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -38,6 +38,7 @@
 @import "graph";
 @import "profile";
 @import "search";
+@import "share";
 
 // Variables
 $pride-color-1: #FBF4EC !default;
@@ -68,9 +69,9 @@ body {
   left: 0;
   top: 0;
   background: rgba($color: #000000, $alpha: .3);
-  width: 100vw;
-  height: 100vh;
-  z-index: 100;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
 
   .web3bio-modal-container {
     background: #fff;
