--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -57,6 +57,7 @@ body {
 .web3bio-container {
   min-height: 75vh;
   padding: .5rem;
+  scroll-behavior: smooth;
   width: 100vw;
 }
 
@@ -80,6 +81,7 @@ body {
     max-width: 80vw;
     overflow-y: auto;
     padding: 2rem;
+    scroll-behavior: smooth;
     width: 100%;
 
     .web3-profile-base {
