--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -383,6 +383,7 @@
 // NFT Preview
 .nft-preview {
   align-items: center;
+  background-color: rgba($dark-color, .5);
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -393,91 +394,80 @@
   z-index: 199;
 
   .preview-overlay {
-    background: rgba($dark-color, .45);
-    height: 100vh;
-    left: 0;
+    background-size: cover;
+    bottom: -2rem;
+    filter: blur(4rem);
+    left: -2rem;
+    opacity: .5;
     position: fixed;
-    top: 0;
-    width: 100vw;
-    z-index: -9;
+    right: -2rem;
+    top: -2rem;
+  }
+
+  .btn-close {
+    position: fixed;
+    right: 1rem;
+    top: 1rem;
+    z-index: 999;
   }
 
   .preview-container {
-    background: $light-color;
     border-radius: .8rem;
-    height: 24rem;
-    max-width: $size-lg;
-    position: relative;
+    display: flex;
+    height: 80vh;
+    max-width: $size-xl;
     width: 100%;
 
-    .btn-close {
-      position: absolute;
-      right: 1rem;
-      top: 1rem;
-      z-index: 999;
-    }
-
     @media screen and (max-width: $size-md) {
+      flex-direction: column;
       height: 98vh;
       overflow-y: auto;
-      width: 96vw;
+      width: 98vw;
 
-      .preview-image,
       .preview-content {
-        border-radius: 0;
-        max-width: none;
+        max-height: none;
       }
 
-      .btn-close {
-        position: fixed;
+      .preview-image {
+        .img-responsive,
+        .video-responsive {
+          max-width: 98vw;  
+        }
+      }
+    }
+
+    @media screen and (min-width: $size-md) {
+      align-items: center;
+
+      .preview-content {
+        max-height: 24rem;
+        max-width: 20rem;
+        overflow: hidden auto;
       }
     }
   }
 
   .preview-image {
     align-items: center;
-    border-bottom-left-radius: .8rem;
-    border-top-left-radius: .8rem;
+    border-radius: .8rem;
     display: flex;
-    height: 100%;
     justify-content: center;
-    max-height: 24rem;
-    max-width: 24rem;
-    padding: .5rem;
+    margin: auto;
     position: relative;
-    width: 100%;
 
     &.preview-image-poap {
-      height: 24rem;
-      overflow: hidden;
-
       .img-container {
         border-radius: 50%;
-        max-height: 16rem;
-        max-width: 16rem;
-        overflow: hidden;
-        position: relative;
-        z-index: 1;
       }
-    }
-
-    .preview-image-bg {
-      background-size: 400%;
-      background-position: center;
-      display: block;
-      filter: blur(4rem);
-      height: 100%;
-      opacity: .5;
-      position: absolute;
-      width: 100%;
     }
 
     .img-responsive,
     .video-responsive {
       border-radius: .8rem;
+      box-shadow: 0 .5rem 8rem var(--nft-primary-color);
       height: auto;
-      max-height: 23rem;
-      max-width: 23rem;
+      max-height: 80vh;
+      max-width: 50vw;
       width: 100%;
     }
 
@@ -490,12 +480,12 @@
 
   .preview-content {
     background: lighten($bg-color, 5%);
-    border-bottom-right-radius: .8rem;
-    border-top-right-radius: .8rem;
+    border-radius: .8rem;
     height: 100%;
-    max-height: 24rem;
-    overflow-y: auto;
     padding: 2rem;
+    position: relative;
+    width: 100%;
+    word-break: break-word;
 
     .collection-title {
       align-items: center;
