--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -63,7 +63,7 @@ body {
 }
 
 .web3bio-mask-cover {
-  align-items: center;
+  align-items: flex-end;
   display: flex;
   position: fixed;
   justify-content: center;
@@ -78,8 +78,8 @@ body {
     background: #fff;
     border-radius: 1rem;
     height: 100%;
-    max-height: 80vh;
-    max-width: 80vw;
+    max-height: 90vh;
+    max-width: 100vw;
     overflow-y: auto;
     padding: 2rem;
     scroll-behavior: smooth;
