--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -63,7 +63,7 @@ body {
 }
 
 .web3bio-mask-cover {
-  align-items: flex-end;
+  align-items: center;
   display: flex;
   position: fixed;
   justify-content: center;
@@ -78,8 +78,8 @@ body {
     background: #fff;
     border-radius: 1rem;
     height: 100%;
-    max-height: 90vh;
-    max-width: 100vw;
+    max-height: calc(100vh - 1rem);
+    max-width: calc(100vw - 1rem);
     overflow-y: auto;
     padding: 2rem;
     scroll-behavior: smooth;
@@ -425,6 +425,15 @@ body {
       display: inline-flex;
       margin: .1rem;
       padding: .4rem;
+
+      &.identity-ens {
+        background: rgba(#5298FF, .1);
+        border-color: rgba(#5298FF, .15);
+
+        .icon {
+          color: #5298FF;
+        }
+      }
 
       &.identity-spaceid {
         background: rgba(#71EBAA, .2);
