--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -431,6 +431,13 @@
     max-width: $size-xl;
     width: 100%;
 
+    .preview-main {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: center;
+    }
+
     @media screen and (max-width: $size-md) {
       flex-direction: column;
       height: 98vh;
@@ -462,6 +469,7 @@
   }
 
   .preview-image {
+    grid-area: 1 / 1 / 4 / 4;
     align-items: center;
     border-radius: .8rem;
     display: flex;
@@ -470,6 +478,7 @@
     position: relative;
 
     &.preview-image-poap {
+
       .img-container {
         border-radius: 50%;
       }
@@ -492,6 +501,8 @@
     }
   }
 
+
+
   .preview-content {
     background: lighten($bg-color, 5%);
     border-radius: .8rem;
@@ -500,30 +511,92 @@
     width: 100%;
     word-break: break-word;
 
-    .collection-title {
-      align-items: center;
+    .collection-description {
+      font-size: .65rem;
+      font-weight: 700;
+      word-break: break-all;
+    }
+    .collection-info{
+      width: 100%;
+      gap: 1rem;
       display: flex;
-      padding-bottom: .5rem;
-
-      .collection-logo {
-        flex: 0 0 1.2rem;
-        margin-right: .25rem;
-
-        .img-responsive {
-          border-radius: .4rem;
-          box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
+      flex-wrap: wrap;
+      .info-item{
+        width: 45%;
+        display: flex;
+        flex-direction: column;
+        .info-name{
+          font-weight: 400;
+          font-size: .6rem;
+          line-height: 1.1;
+          letter-spacing: -.24px;
+          color: #595959;
+          margin-bottom: .2rem;
+        }
+        .info-value{
+          font-weight: 600;
           font-size: 1rem;
-          height: 1.2rem;
-          object-fit: cover;
-          width: 1.2rem;
+          color:#121212
         }
       }
+
+    }
+    .collection-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      padding-bottom: .5rem;
 
       .collection-name {
         font-size: .65rem;
         font-weight: 700;
       }
+
+      .collection-title {
+        align-items: center;
+        display: flex;
+
+        .collection-logo {
+          flex: 0 0 1.2rem;
+          margin-right: .25rem;
+
+          .img-responsive {
+            border-radius: .4rem;
+            box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
+            font-size: 1rem;
+            height: 1.2rem;
+            object-fit: cover;
+            width: 1.2rem;
+          }
+        }
+
+
+      }
     }
+
+    .collection-media {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: .5rem;
+
+      .media-item {
+        width: 1rem;
+        height: 1rem;
+
+        .media-img {
+          width: 100%;
+          height: 100%;
+
+          .img-placeholder {
+            height: 100%;
+            border-radius: 100%;
+          }
+        }
+      }
+    }
+
 
     .nft-header-name {
       font-size: 1.2rem;
