--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -469,7 +469,6 @@
   }
 
   .preview-image {
-    grid-area: 1 / 1 / 4 / 4;
     align-items: center;
     border-radius: .8rem;
     display: flex;
@@ -515,6 +514,12 @@
       font-size: .65rem;
       font-weight: 700;
       word-break: break-all;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      margin-bottom: .5rem;
     }
     .collection-info{
       width: 100%;
@@ -535,7 +540,7 @@
         }
         .info-value{
           font-weight: 600;
-          font-size: 1rem;
+          font-size: .8rem;
           color:#121212
         }
       }
@@ -551,6 +556,8 @@
       .collection-name {
         font-size: .65rem;
         font-weight: 700;
+        max-width: 70%;
+        text-wrap: nowrap;
       }
 
       .collection-title {
@@ -580,11 +587,15 @@
       align-items: center;
       justify-content: flex-start;
       gap: .5rem;
+      margin-bottom: .5rem;
 
       .media-item {
         width: 1rem;
         height: 1rem;
-
+        &:hover{
+          transition: all .5s ease;
+          scale: 1.1;
+        }
         .media-img {
           width: 100%;
           height: 100%;
