--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -511,26 +511,48 @@
     word-break: break-word;
 
     .collection-description {
-      font-size: .65rem;
-      font-weight: 700;
-      word-break: break-all;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
+      display: flex;
+      flex-wrap: wrap;
+      gap: .2rem;
       margin-bottom: .5rem;
+
+      .description-content {
+        font-size: .65rem;
+        font-weight: 700;
+        word-break: break-all;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
+
+      .display-ellipsis {
+        -webkit-line-clamp: unset;
+        -webkit-box-orient: unset;
+      }
+
+      .read-more {
+        font-weight: 700;
+        font-size: .3rem;
+        cursor: pointer;
+        color: var(--primary);
+        text-decoration: underline;
+      }
     }
-    .collection-info{
+
+
+    .collection-info {
       width: 100%;
       gap: 1rem;
       display: flex;
       flex-wrap: wrap;
-      .info-item{
+
+      .info-item {
         width: 45%;
         display: flex;
         flex-direction: column;
-        .info-name{
+
+        .info-name {
           font-weight: 400;
           font-size: .6rem;
           line-height: 1.1;
@@ -538,14 +560,16 @@
           color: #595959;
           margin-bottom: .2rem;
         }
-        .info-value{
+
+        .info-value {
           font-weight: 600;
           font-size: .8rem;
-          color:#121212
+          color: #121212
         }
       }
 
     }
+
     .collection-header {
       display: flex;
       justify-content: space-between;
@@ -592,10 +616,12 @@
       .media-item {
         width: 1rem;
         height: 1rem;
-        &:hover{
+
+        &:hover {
           transition: all .5s ease;
           scale: 1.1;
         }
+
         .media-img {
           width: 100%;
           height: 100%;
